Terminando o o campo de servico, faltando somente ajustes.

--- a/index.html
+++ b/index.html
@@ -116,9 +116,31 @@
 
             <div class="servicos">
                 <div class="principal-servico">
-                <h1>Nosso Serviço
+                <h1>Nosso Serviço <br>
                     Para alcançar nossos objetivos</h1>
+
+                    <div class="caixa">
+                        <div class="box"><img src="./assets/3676282.png" alt="">
+                        <h3>Monitoramento</h3>
+                        <p>Descrição</p>
+                    </div>
+                        <div class="box"><img src="./assets/3676282.png" alt="">
+                        <h3>Notificações</h3>
+                        <p>Descrição</p>
+                        </div>
+                        <div class="box"><img src="./assets/3676282.png" alt="">
+                        <h3>Análise</h3>
+                        <p>Descrição</p>
+                    </div>
+                        <div class="box"><img src="./assets/3676282.png" alt="">
+                        <h3>Alertas</h3>
+                        <p>Descrição</p>
+                    </div>
+
+                    </div>
                 </div>
+
+
             </div>
 
 
