Foi terminado a equipe, e começado o footer, faltando so termina de implementar o conteudo do footer

--- a/index.html
+++ b/index.html
@@ -156,27 +156,52 @@
                 <div class="container">
                 
                 <div class="caixa-equipe">
+                    <img src="./assets/gratis-png-marca-de-triangulo-circulo-logotipo-area-una-letra.png" alt="">
                     <p>Yasmin</p>
+                    <h6>A</h6>
+                    <h6>B</h6>
+                    <h6>C</h6>
                 </div>
 
                 <div class="caixa-equipe">
+                    <img src="./assets/gratis-png-marca-de-triangulo-circulo-logotipo-area-una-letra.png" alt="">
                     <p>Reynald</p>
+                    <h6>A</h6>
+                    <h6>B</h6>
+                    <h6>C</h6>
                 </div>
 
                 <div class="caixa-equipe">
+                    <img src="./assets/gratis-png-marca-de-triangulo-circulo-logotipo-area-una-letra.png" alt="">
                     <p>Matheus</p>
+                    <h6>A</h6>
+                    <h6>B</h6>
+                    <h6>C</h6>
                 </div>
 
                 <div class="caixa-equipe">
+                    <img src="./assets/gratis-png-marca-de-triangulo-circulo-logotipo-area-una-letra.png" alt="">
                     <p>João Kevin</p>
+                    <h6>A</h6>
+                    <h6>B</h6>
+                    <h6>C</h6>
+
                 </div>
 
                 <div class="caixa-equipe">
+                    <img src="./assets/gratis-png-marca-de-triangulo-circulo-logotipo-area-una-letra.png" alt="">
                     <p>Victor</p>
+                    <h6>A</h6>
+                    <h6>B</h6>
+                    <h6>C</h6>
                 </div>
 
                  </div>
 
+            </div>
+
+            <div class="footer">
+             <img src="./assets/Captura de tela 2024-09-03 123420.png" alt="">
             </div>
 
 
