adicionando lembrar senha e esqueci senha no formulário

--- a/login.html
+++ b/login.html
@@ -24,6 +24,13 @@
                         <input type="password" placeholder="Senha">
                     </div>
                     <button>Entrar</button>
+                    <div class="checkBox">
+                        <input type="checkbox">
+                        Lembrar Senha
+                    </div>
+                    <div  class="esqueciSenha">
+                        <a href="">Esqueci minha senha</a>
+                    </div>
                 </div>
             </div>
         </div>
