página de login responsiva

--- a/login.html
+++ b/login.html
@@ -17,19 +17,21 @@
                 </div>
             </div>
             <div class="formulario">
-                <div class="login">
-                    <img src="./assets/insignaLogoBoaQualidade.png" alt="logo" class="logo">
-                    <div class="inputs">
-                        <input type="text" placeholder="Usuário">
-                        <input type="password" placeholder="Senha">
-                    </div>
-                    <button>Entrar</button>
-                    <div class="checkBox">
-                        <input type="checkbox">
-                        Lembrar Senha
-                    </div>
-                    <div  class="esqueciSenha">
-                        <a href="">Esqueci minha senha</a>
+                <div class="fundoResponsivo">
+                    <div class="login">
+                        <img src="./assets/insignaLogoBoaQualidade.png" alt="logo" class="logo">
+                        <div class="inputs">
+                            <input type="text" placeholder="Usuário">
+                            <input type="password" placeholder="Senha">
+                        </div>
+                        <button>Entrar</button>
+                        <div class="checkBox">
+                            <input type="checkbox">
+                            Lembrar Senha
+                        </div>
+                        <div  class="esqueciSenha">
+                            <a href="">Esqueceu sua senha?</a>
+                        </div>
                     </div>
                 </div>
             </div>
