--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Insigna</title>
-    <link rel="stylesheet" href="./css/login.css">
+    <link rel="stylesheet" href="../Site-Insigna/css/login.css">
     <link rel="icon" href="/assets/LogoSoDistintivo.png">
 </head>
 <body>
