--- a/login.html
+++ b/login.html
@@ -11,9 +11,9 @@
     <div class="container">
         <div class="container-login">
             <div class="nav">
-                <a href="" class="cadastro">CADASTRE-SE</a>
+                <a href="./cadastro.html" class="cadastro">CADASTRE-SE</a>
                 <div class="home">
-                    <a href="" class="texto">HOME</a>
+                    <a href="./index.html" class="texto">HOME</a>
                     <img src="./assets/mdi_arrow-right.png" alt="">
                 </div>
             </div>
