--- a/public/login.html
+++ b/public/login.html
@@ -26,7 +26,7 @@
                 class="logo"
               />
               <div class="inputs">
-                <input type="text" placeholder="Usuário" id="ipt_nome"/>
+                <input type="text" placeholder="Email" id="ipt_email"/>
                 <input type="password" placeholder="Senha" id="ipt_senha"/>
               </div>
               <button onclick="logar()">Entrar</button>
@@ -48,13 +48,13 @@
 
 <script>
   function logar() {
-    var nomeVar = ipt_nome.value;
+    var emailVar = ipt_email.value;
     var senhaVar = ipt_senha.value;
 
-    console.log("FORM LOGIN: ", nomeVar);
+    console.log("FORM LOGIN: ", emailVar);
     console.log("FORM SENHA: ", senhaVar);
 
-    if (nomeVar == "" || senhaVar == "") {
+    if (emailVar == "" || senhaVar == "") {
       alert("Preencha todos os campos para prosseguir!");
       return false;
     } else {
@@ -64,7 +64,7 @@
           "Content-Type": "application/json",
         },
         body: JSON.stringify({
-          nomeServer: nomeVar,
+          emailServer: emailVar,
           senhaServer: senhaVar,
         }),
       })
