Feito 4 partes da refatoração

--- a/public/index.html
+++ b/public/index.html
@@ -10,50 +10,37 @@
 </head>
 
 <body>
-    <div class="header">
+    <header>
         <div class="titulo">Insigna</div>
-        <div class="nav">
+        <nav>
             <ul>
                 <div class="teste">
-
-
-
                     <li>
                         <a href="#div_crime">
                             SOBRE
                         </a>
                     </li>
-
                     <li>
                         <a href="#div_sobre">
                             MISSÃO
                         </a>
                     </li>
-
-
-
-
                     <li>
                         <a href="#div_servico">
                             SERVIÇO
                         </a>
 
                     </li>
-
-
                     <li>
                         <a href="#div_equipe">
                             RESULTADO
                         </a>
 
                     </li>
-
                 </div>
-
             </ul>
+        </nav>
 
-
-        </div>
 
         <div class="entrar">
             <ul>
@@ -67,120 +54,127 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </header>
 
 
 
 
-    <div class="imagem-principal" id="div_principal">
-        <div class="fundo">
+    <section class="imagem-principal" id="div_principal">
+        <picture class="fundo">
             <img src="./assets/imagem-fundo.png" alt="">
-        </div>
+        </picture>
         <div class="overlay">
             <p>Transforme Dados em Ação: Insights, Alertas e Decisões Inteligentes ao Seu Alcance</p>
             <button>Saiba-mais</button>
         </div>
-        <div class="imagem-policia" id="div_crime">
+        <picture class="imagem-policia" id="div_crime">
             <img src="./assets/mulher-sucesso.png" alt="">
-        </div>
-    </div>
+        </picture>
+    </section>
 
 
 
-    <div class="realizacao">
-        <div class="crime">
+    <section class="realizacao">
+        <main class="container-missao">
+            <div class="box-missao">
 
-            <img src="./assets/algema.png" alt="">
-            <h3>Analise de dados</h3>
-            <h5>Transformando informações em decisões inteligentes</h5>
+                <img src="./assets/algema.png" alt="">
+                <h3>Analise de dados</h3>
+                <h5>Transformando informações em decisões inteligentes</h5>
 
-        </div>
-
-        <div class="crime">
-            <img src="./assets/solucao.png" alt="">
-            <h3>Insigths</h3>
-            <h5>Revelando o valor escondido nos seus dados para decisões mais acertadas</h5>
-        </div>
-
-        <div class="crime">
-            <img src="./assets/otimizacao.png" alt="">
-            <h3>Notificação</h3>
-            <h5>O alerta que garante que você nunca perca uma oportunidade ou um problema.</h5>
-        </div>
-    </div>
-
-    <div class="sobre-nos" id="div_sobre">
-
-        <div class="fundo-preto">
-
-
-            <h1>Visão da Insigna</h1>
-
-            <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/-L8S1lIRg50?si=ECCKy7oiGzCcF8Ek"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
-            <p>A Insigna empresa de monitoramento de dados tem como visão capacitar seus clientes a tomarem decisões
-                mais estratégicas e informadas em relação à segurança, fornecendo uma análise detalhada de dados já
-                coletados. O foco da empresa está em transformar dados brutos de diversas fontes em insights valiosos e
-                de fácil interpretação.</p>
 
-            <p>A plataforma da empresa analisa esses dados, identifica padrões, tendências e potenciais riscos, e os
-                apresenta em relatórios claros e visualizações intuitivas. A partir desses insights, o cliente tem total
-                autonomia para tomar as decisões que considerar mais adequadas para melhorar a segurança de seus ativos
-                e operações.</p>
+            <div class="box-missao">
+                <img src="./assets/solucao.png" alt="">
+                <h3>Insigths</h3>
+                <h5>Revelando o valor escondido nos seus dados para decisões mais acertadas</h5>
+            </div>
+
+            <div class="box-missao">
+                <img src="./assets/otimizacao.png" alt="">
+                <h3>Notificação</h3>
+                <h5>O alerta que garante que você nunca perca uma oportunidade ou um problema.</h5>
+            </div>
+        </main>
+    </section>
+
+    <section class="sobre-nos" id="div_sobre">
+        <main class="container-sobre">
+            <div class="fundo-preto">
+                <h1>Visão da Insigna</h1>
+
+                <div class="video">
+                 <!--  <iframe width="560" height="315" src="https://www.youtube.com/embed/-L8S1lIRg50?si=ECCKy7oiGzCcF8Ek"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> --> 
+                </div>
+                <p>A Insigna empresa de monitoramento de dados tem como visão capacitar seus clientes a tomarem decisões
+                    mais estratégicas e informadas em relação à segurança, fornecendo uma análise detalhada de dados já
+                    coletados. O foco da empresa está em transformar dados brutos de diversas fontes em insights
+                    valiosos e
+                    de fácil interpretação.</p>
+
+                <p>A plataforma da empresa analisa esses dados, identifica padrões, tendências e potenciais riscos, e os
+                    apresenta em relatórios claros e visualizações intuitivas. A partir desses insights, o cliente tem
+                    total
+                    autonomia para tomar as decisões que considerar mais adequadas para melhorar a segurança de seus
+                    ativos
+                    e operações.</p>
 
 
-            <p> O sistema oferece uma visão ampla e detalhada dos dados, mas coloca o poder de decisão nas mãos do
-                cliente, permitindo que ele ajuste suas estratégias de segurança com base nas informações fornecidas.
-                Dessa forma, a empresa visa proporcionar um suporte inteligente, sem interferir no processo decisório,
-                ajudando seus clientes a serem mais eficientes e proativos na gestão da segurança.</p>
+                <p> O sistema oferece uma visão ampla e detalhada dos dados, mas coloca o poder de decisão nas mãos do
+                    cliente, permitindo que ele ajuste suas estratégias de segurança com base nas informações
+                    fornecidas.
+                    Dessa forma, a empresa visa proporcionar um suporte inteligente, sem interferir no processo
+                    decisório,
+                    ajudando seus clientes a serem mais eficientes e proativos na gestão da segurança.</p>
+            </div>
+        </main>
+    </section>
 
 
-        </div>
-
-    </div>
-
-
-    <div class="servicos" id="div_servico">
-        <div class="principal-servico">
+    <section class="servicos" id="div_servico">
+        <main class="principal-servico">
             <h1>Serviço dedicado a alcançar nossos objetivos</h1>
 
             <div class="caixa">
-                <div class="box"><img src="./assets/3676282.png" alt="">
-                    <div class="caixa-texto">
-                        <h3>Monitoramento</h3>
-                        <p>
-                            Insigna faz o Monitoramento para análise de informações para gerar insights e auxiliar na
-                            tomada de decisões estratégicas.</p>
-                    </div>
-                </div>
-                <div class="box"><img src="./assets/notificacao.png" alt="">
-                    <div class="caixa-texto">
-                        <h3>Notificação</h3>
-                        <p>Insigna envia notificação automática com base na análise de informações para apoiar decisões
-                            estratégicas.</p>
-                    </div>
-                </div>
-                <div class="box"><img src="./assets/analise.webp" alt="">
-                    <div class="caixa-texto">
-                        <h3>Analise</h3>
-                        <p>Olhe para as informações e encontre padrões que ajudam a tomar decisões melhores.</p>
-                    </div>
-                </div>
-                <div class="box"><img src="./assets/alerta.png" alt="">
 
-                    <div class="caixa-texto">
-                        <h3>Alerta</h3>
-                        <p>avisamos sobre eventos importantes ou problemas com base na análise das informações.</p>
-                    </div>
+
+                <div class="caixa-texto">
+                    <img src="./assets/3676282.png" alt="">
+                    <h3>Monitoramento</h3>
+                    <p> Insigna faz o Monitoramento para análise de informações para gerar insights e auxiliar na
+                        tomada de decisões estratégicas.</p>
                 </div>
+
+
+                <div class="caixa-texto">
+                    <img src="./assets/notificacao.png" alt="">
+                    <h3>Notificação</h3>
+                    <p>Insigna envia notificação automática com base na análise de informações para apoiar decisões
+                        estratégicas.</p>
+                </div>
+
+
+                <div class="caixa-texto">
+                    <img src="./assets/analise.webp" alt="">
+                    <h3>Analise</h3>
+                    <p>Olhe para as informações e encontre padrões que ajudam a tomar decisões melhores.</p>
+                </div>
+
+
+
+                <div class="caixa-texto">
+                    <img src="./assets/alerta.png" alt="">
+                    <h3>Alerta</h3>
+                    <p>avisamos sobre eventos importantes ou problemas com base na análise das informações.</p>
+                </div>
+
 
             </div>
-        </div>
-    </div>
+        </main>
+    </section>
 
     <div class="equipe" id="div_equipe">
 
