Faltando ajeitar umas linhas no css, e assim terminado a refatoração do codigo

--- a/public/index.html
+++ b/public/index.html
@@ -258,6 +258,7 @@
             <div class="column newsletter">
 
                 <form action="#">
+                    <label for="">Envie um e-mail para contato</label>
                     <input type="email" placeholder="Envie um e-mail" />
                     <button type="submit">Enviar Email</button>
                 </form>
