Faltando o ultimo ajuste

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <div class="teste">
                     <li>
-                        <a href="#div_crime">
+                        <a href="#div_img_">
                             SOBRE
                         </a>
                     </li>
@@ -61,8 +61,8 @@
 
     <section class="imagem-principal" id="div_principal">
         <picture class="fundo">
-            <img src="./assets/imagem-fundo.png" alt="">
-            <div class="overlay">
+            <img id="" src="./assets/imagem-fundo.png" alt="">
+            <div class="overlay" id="div_overlay">
                 <p>Transforme Dados em Ação: Insights, Alertas e Decisões Inteligentes ao Seu Alcance</p>
                 <button>Saiba-mais</button>
             </div>
@@ -73,11 +73,11 @@
 
 
 
-    <section class="realizacao">
+    <section class="realizacao" id="div_img_"   >
         <main class="container-missao">
-            <div class="box-missao">
+            <div class="box-missao" >
 
-                <img src="./assets/algema.png" alt="">
+                <img src="./assets/algema.png" alt="" >
                 <h3>Analise de dados</h3>
                 <h5>Transformando informações em decisões inteligentes</h5>
 
