--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/cadastro.css" />
     <link rel="icon" href="/assets/LogoSoDistintivo.png" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <title>Cadastro - Insigna</title>
   </head>
   <body>
-    <div class="container">
+    <div class="box-principal">
       <div class="container-cadastro">
-        <div class="nav">
+        <div class="nav-novo">
           <div class="login">
             <a href="./login.html">LOGIN</a>
           </div>
@@ -29,7 +30,10 @@
 
             <div class="formulario">
               <div class="form1">
-                <input type="text" placeholder="Nome Completo" id="ipt_nome"/>
+                <div class="input-group mb-3">
+                  <span class="input-group-text" id="basic-addon1">dl_</span>
+                  <input type="text" class="form-control" placeholder="Nome" aria-label="Username" aria-describedby="basic-addon1" id="ipt_nome">
+                </div>
                 <input type="text" placeholder="Departamento" id="ipt_departamento"/>
                 <input type="text" placeholder="E-mail" id="ipt_email"/>
               </div>
@@ -48,14 +52,14 @@
         </div>
       </div>
 
-      <div class="imagem"></div>
+      <div class="teste"></div>
     </div>
   </body>
 </html>
 
 <script>
   function cadastrar() {
-    var nomeVar = ipt_nome.value;
+    var nomeVar = "dl_" + ipt_nome.value;
     var departamentoVar = ipt_departamento.value;
     var emailVar = ipt_email.value;
     var matriculaVar = Number(ipt_matricula.value);
