--- a/public/login.html
+++ b/public/login.html
@@ -26,7 +26,7 @@
                 class="logo"
               />
               <div class="inputs">
-                <input type="text" placeholder="Email" id="ipt_email"/>
+                <input type="text" placeholder="Nome" id="ipt_nome"/>
                 <input type="password" placeholder="Senha" id="ipt_senha"/>
               </div>
               <button onclick="logar()">Entrar</button>
@@ -48,13 +48,13 @@
 
 <script>
   function logar() {
-    var emailVar = ipt_email.value;
+    var nomeVar = ipt_nome.value;
     var senhaVar = ipt_senha.value;
 
-    console.log("FORM LOGIN: ", emailVar);
+    console.log("FORM LOGIN: ", nomeVar);
     console.log("FORM SENHA: ", senhaVar);
 
-    if (emailVar == "" || senhaVar == "") {
+    if (nomeVar == "" || senhaVar == "") {
       alert("Preencha todos os campos para prosseguir!");
       return false;
     } else {
@@ -64,7 +64,7 @@
           "Content-Type": "application/json",
         },
         body: JSON.stringify({
-          emailServer: emailVar,
+          nomeServer: nomeVar,
           senhaServer: senhaVar,
         }),
       })
@@ -84,7 +84,7 @@
               }, 1000); // apenas para exibir o loading
             });
           } else {
-            alert("Email ou Senha inválidos");
+            alert("Usuário ou Senha inválidos");
             console.log("Houve um erro ao tentar realizar o login!");
 
             resposta.text().then((texto) => {
