feita algumas atualizações no site, e foi ajeitado a input do nome no cadastro

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -30,7 +30,7 @@
 
             <div class="formulario">
               <div class="form1">
-                <div class="input-group mb-3">
+                <div class="input-group mb-3" style="width: 90%;">
                   <span class="input-group-text" id="basic-addon1">dl_</span>
                   <input type="text" class="form-control" placeholder="Nome" aria-label="Username" aria-describedby="basic-addon1" id="ipt_nome">
                 </div>
