--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
             <ul>
                 <li>
                     <a href="./login.html"> LOGIN </a>
-                    <img src="./assets/24163fd3bbb54f8b3bfa9e3c3b4065dc.png" alt="">
+                    <img src="./assets/mdi_arrow-right.png" alt="">
                 </li>
                 <li class="cadastro">
                     <a href="./cadastro.html"> Cadastra-se </a>
@@ -140,7 +140,7 @@
 
             <div class="caixa">
                 <div class="caixa-texto">
-                    <img src="./assets/3676282.png" alt="">
+                    <img src="./assets/MONITORAMENTO-DE-COMPUTADORES.png" alt="">
                     <h3>Monitoramento</h3>
                     <p> Insigna faz o Monitoramento para análise de informações para gerar insights e auxiliar na
                         tomada de decisões estratégicas.</p>
@@ -195,7 +195,7 @@
 
             <div class="caixa-equipe">
 
-                <img src="./assets/concluido.webp" alt="">
+                <img src="./assets/concluido.png" alt="">
                 <p>Conclusão</p>
                 <h6>Mais de 3 mil projetos entregues.</h6>
                 <h6>Com conclusão de 100%.</h6>
