CSS do menu lateral

--- a/public/dash/dashboard.html
+++ b/public/dash/dashboard.html
@@ -12,10 +12,11 @@
         <div class="container">
 
             <div class="logo">
-                <img src="" alt="">
+                <img src="/public/assets/insignaLogoBoaQualidade.png" alt="logoInsigna">
             </div>
 
             <div class="menu">
+                <h5>MENU</h5>
                 <button>Dashboard</button>
                 <button>Cadastro de Operações</button>
                 <button>Cadastro de Investigador</button>
@@ -23,6 +24,7 @@
             </div>
 
             <div class="outros">
+                <h5>OUTROS</h5>
                 <button>Ajustes</button>
                 <button>Conta</button>
                 <button>Ajuda</button>
