Site continuando a edicao, front do cadastro de operacao começado

--- a/public/dash/cadastroOperacoes.html
+++ b/public/dash/cadastroOperacoes.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/cadastroOperacao.css">
     <title>Cadastro De Operações</title>
 </head>
 <body>
+   <section class="menu-lateral">
+    <div class="container">
+
+        <div class="logo">
+            <img src="/public/assets/insignaLogoBoaQualidade.png" alt="logoInsigna">
+        </div>
+
+        <div class="menu">
+            <h5>MENU</h5>
+            <button>Dashboard</button>
+            <button>Cadastro de Operações</button>
+            <button>Cadastro de Investigador</button>
+            <button>Aceitar Operações</button>
+        </div>
+
+        <div class="outros">
+            <h5>OUTROS</h5>
+            <button>Ajustes</button>
+            <button>Conta</button>
+            <button>Ajuda</button>
+        </div>
+
+    </div>
+   </section>
+
+
+
     <div>
         <div>
           Nome da Operação: <input type="text" placeholder="Ex: Lava-Jato" id="ipt_nomeOp"/>
