--- a/public/index.html
+++ b/public/index.html
@@ -102,12 +102,14 @@
             <div class="fundo-preto">
                 <h1>Visão da Insigna</h1>
 
-                <div class="video">
-                 <!--  <iframe width="560" height="315" src="https://www.youtube.com/embed/-L8S1lIRg50?si=ECCKy7oiGzCcF8Ek"
+              <!--  <div class="video">
+                 <iframe width="560" height="315" style="position: absolute;" src="https://www.youtube.com/embed/-L8S1lIRg50?si=ECCKy7oiGzCcF8Ek"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> --> 
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
+            -->
+                <div class="texto-sobre-nos">
                 <p>A Insigna empresa de monitoramento de dados tem como visão capacitar seus clientes a tomarem decisões
                     mais estratégicas e informadas em relação à segurança, fornecendo uma análise detalhada de dados já
                     coletados. O foco da empresa está em transformar dados brutos de diversas fontes em insights
@@ -129,6 +131,7 @@
                     decisório,
                     ajudando seus clientes a serem mais eficientes e proativos na gestão da segurança.</p>
             </div>
+        </div>
         </main>
     </section>
 
