Ajustando erros de links

--- a/public/dash/dashboard.html
+++ b/public/dash/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/css/dashboard.css">
+    <link rel="stylesheet" href="../css/dashboard.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>Dashboard - INSIGNA</title>
 </head>
@@ -13,7 +13,7 @@
         <div class="container-menu">
 
             <div class="logo">
-                <img src="/public/assets/insignaLogoBoaQualidade.png" alt="logoInsigna">
+                <img src="./assets/insignaLogoBoaQualidade.png" alt="logoInsigna">
             </div>
             <br>
 
