Foram adicionados os ultimos campos, faltando somente adicionar os icones e ajeitar as inputs

--- a/public/dash/cadastroOperacoes.html
+++ b/public/dash/cadastroOperacoes.html
@@ -13,7 +13,7 @@
   <section class="menu-lateral">
     <div class="container">
       <div class="logo">
-        <img src="/public/assets/insignaLogoBoaQualidade.png" alt="logoInsigna">
+        <img src="../assets/insignaLogoBoaQualidade.png" alt="logoInsigna">
       </div>
 
       <div class="menu">
@@ -37,7 +37,9 @@
   <section class="main-content">
     <!-- Header -->
     <section class="header">
-      
+      <div class="box-usuario">
+        <p>Joao Kevin</p>
+      </div>
     </section>
 
     <h1>cadastro de operações</h1>
