Ajeitado o video do site

--- a/public/index.html
+++ b/public/index.html
@@ -101,14 +101,16 @@
         <main class="container-sobre">
             <div class="fundo-preto">
                 <h1>Visão da Insigna</h1>
-
-              <!--  <div class="video">
-                 <iframe width="560" height="315" style="position: absolute;" src="https://www.youtube.com/embed/-L8S1lIRg50?si=ECCKy7oiGzCcF8Ek"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="conteudo-sobre">
+              <div class="video">
+                    <video src="./video/Data Analysis Free Stock Video - Data Analytics Stock Footage - Graphs Stock Footage - Data Videos.mp4"
+                    controls
+                    width="90%"
+                    height="100%"
+                    autoplay
+                    muted></video>
                 </div>
-            -->
+      
                 <div class="texto-sobre-nos">
                 <p>A Insigna empresa de monitoramento de dados tem como visão capacitar seus clientes a tomarem decisões
                     mais estratégicas e informadas em relação à segurança, fornecendo uma análise detalhada de dados já
@@ -131,6 +133,7 @@
                     decisório,
                     ajudando seus clientes a serem mais eficientes e proativos na gestão da segurança.</p>
             </div>
+        </div>
         </div>
         </main>
     </section>
