--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
                     <img src="./assets/mdi_arrow-right.png" alt="">
                 </li>
                 <li class="cadastro">
-                    <a href="./cadastro.html"> Cadastra-se </a>
+                    <a href="./cadastro.html"> Cadastrar-se </a>
                     <img src="./assets/symbole-fleche-droite-grise.png" alt="">
                 </li>
             </ul>
@@ -151,7 +151,7 @@
 
 
                 <div class="caixa-texto">
-                    <img src="./assets/notificacao.png" alt="">
+                    <img src="./assets/notificacaoIndex.png" alt="">
                     <h3>Notificação</h3>
                     <p>Insigna envia notificação automática com base na análise de informações para apoiar decisões
                         estratégicas.</p>
