Arrumei as setas do cadastro e login

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -18,7 +18,7 @@
 
           <div class="home">
             <a href="./index.html">HOME</a>
-            <img src="./assets/mdi_arrow-right.png" alt="" />
+            <img src="./assets/flecha.png"/>
           </div>
         </div>
 
