--- a/public/login.html
+++ b/public/login.html
@@ -14,7 +14,7 @@
           <a href="./cadastro.html" class="cadastro">CADASTRE-SE</a>
           <div class="home">
             <a href="./index.html" class="texto">HOME</a>
-            <img src="./assets/mdi_arrow-right.png" alt="" />
+            <img src="./assets/flecha.png"/>
           </div>
         </div>
         <div class="formulario">
