--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -68,7 +68,7 @@
 
     if (
       nomeVar == "" ||
-      departamentoVar == "" ||
+      distritoPolicialVar == "" ||
       emailVar == "" ||
       matriculaVar == "" ||
       senhaVar == "" ||
