--- a/public/dash/cadastroOperacoes.html
+++ b/public/dash/cadastroOperacoes.html
@@ -10,28 +10,33 @@
 
 <body>
   <!-- Navbar lateral -->
-  <section class="menu-lateral">
-    <div class="container">
-      <div class="logo">
-        <img src="../assets/insignaLogoBoaQualidade.png" alt="logoInsigna">
-      </div>
+  <div class="menu-lateral">
+    <div class="container-menu">
 
-      <div class="menu">
-        <h4>MENU</h4>
-        <a><img src="../assets/grafico-icon.png">Dashboard</a>
-        <a><img src="../assets/user-icon.png"> Cadastro de Operações</a>
-        <a><img src="../assets/user-icon.png" alt=""> Cadastro de Investigador</a>
-        <a><img src="../assets/clipboard-icon.png" alt="">Aceitar Operações</a>
-      </div>
+        <div class="logo">
+            <img src="../assets/insignaLogoBoaQualidade.png">
+        </div>
+        <br>
 
-      <div class="outros">
-        <h4>OUTROS</h4>
-        <a><img src="../assets/config-icon.png" alt="">Ajustes</a>
-        <a><img src="../assets/conta-icon.png" alt="">Conta</a>
-        <a><img src="../assets/ajuda-icon.png" alt="">Ajuda</a>
-      </div>
+        <div class="menu">
+            <h4>MENU</h4>
+            <a href="dashboard.html"><img src="../assets/grafico-icon.png">Dashboard</a>
+            <a href="cadastroOperacoes.html"><img src="../assets/operacoes.png">Cadastro de Operações</a>
+            <a href="cadastroInvestigadores.html"><img src="../assets/user-icon.png">Cadastro de Investigador</a>
+            <a><img src="../assets/aceitarOp.png">Aceitar Operações</a>
+        </div>
+        <br>
+        <br>
+        <div class="outros">
+            <h4>OUTROS</h4>
+            <a href="../index.html"><img src="../assets/home.png">Home</a>
+            <a><img src="../assets/config-icon.png">Ajustes</a>
+            <a><img src="../assets/conta-icon.png">Conta</a>
+            <a><img src="../assets/ajuda-icon.png">Ajuda</a>
+        </div>
+
     </div>
-  </section>
+</div>
 
   <!-- Conteúdo principal ao lado da navbar -->
   <section class="main-content">
