--- a/public/login.html
+++ b/public/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login - Insigna</title>
-    <link rel="stylesheet" href="./css/login.css" />
+    <link rel="stylesheet" href="./css/login.css"/>
     <link rel="icon" href="/assets/LogoSoDistintivo.png" />
   </head>
   <body>
@@ -84,7 +84,7 @@
 
               alert("Login com sucesso!");
               setTimeout(function () {
-                window.location = "./dash/dashboard.html";
+                window.location = "./dash/dashboardOutros.html";
               }, 1000); // apenas para exibir o loading
             });
           } else {
