ajeitando rotas, css

--- a/public/dash/cadastroOperacoes.html
+++ b/public/dash/cadastroOperacoes.html
@@ -20,7 +20,7 @@
 
         <div class="menu">
             <h4>MENU</h4>
-            <a href="dashboard.html"><img src="../assets/grafico-icon.png">Dashboard</a>
+            <a href="./dashboardOutros.html"><img src="../assets/grafico-icon.png">Dashboard</a>
             <a href="cadastroOperacoes.html"><img src="../assets/operacoes.png">Cadastro de Operações</a>
             <a href="cadastroInvestigadores.html"><img src="../assets/user-icon.png">Cadastro de Investigador</a>
             <a><img src="../assets/aceitarOp.png">Aceitar Operações</a>
