front cadastro de operação finalizado

--- a/public/dash/dashboardOutros.html
+++ b/public/dash/dashboardOutros.html
@@ -152,7 +152,7 @@
 
 <script>
 
-nome_usuario.innerHTML = "Bem vindo(a) " + sessionStorage.NOME_USUARIO;
+nome_usuario.innerHTML = "Bem-vindo(a) " + sessionStorage.NOME_USUARIO;
 
 const dados = {
 
