Ajustes nas telas da dashboard

--- a/public/dash/cadastroOperacoes.html
+++ b/public/dash/cadastroOperacoes.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../css/cadastroOperacao.css" />
-  <title>Cadastro De Operações</title>
+  <title>Cadastro De Operações - INSIGNA</title>
 </head>
 
 <body>
@@ -28,9 +28,7 @@
       <div class="outros">
         <h4>OUTROS</h4>
         <a href="../index.html"><img src="../assets/home.png" />Home</a>
-        <a><img src="../assets/config-icon.png" />Ajustes</a>
         <a><img src="../assets/conta-icon.png" />Conta</a>
-        <a><img src="../assets/ajuda-icon.png" />Ajuda</a>
       </div>
     </div>
   </div>
