--- a/public/dash/dashboardCarga.html
+++ b/public/dash/dashboardCarga.html
@@ -32,9 +32,7 @@
             <div class="outros">
                 <h4>OUTROS</h4>
                 <a href="../index.html"><img src="../assets/home.png">Home</a>
-                <a><img src="../assets/config-icon.png">Ajustes</a>
                 <a><img src="../assets/conta-icon.png">Conta</a>
-                <a><img src="../assets/ajuda-icon.png">Ajuda</a>
             </div>
 
         </div>
@@ -152,7 +150,7 @@
 
 <script>
 
-nome_usuario.innerHTML = "Bem vindo(a) " + sessionStorage.NOME_USUARIO;
+nome_usuario.innerHTML = "Bem-vindo(a) " + sessionStorage.NOME_USUARIO;
 
 const dados = {
 
