Inicio CRUD de usuário

--- a/public/dash/cadastroInvestigadores.html
+++ b/public/dash/cadastroInvestigadores.html
@@ -73,7 +73,7 @@
               <input type="text" class="ipt" id="ipt_matriculaIv"><br>
               <label>Senha:</label><br>
               <input type="password" class="ipt" id="ipt_senhaIv"><br>
-              <label>Confirmaçao de senha:</label><br>
+              <label>Confirmação de senha:</label><br>
               <input type="password" class="ipt" id="ipt_confirmarSenhaIv"><br>
             </div>
           
