--- a/public/login.html
+++ b/public/login.html
@@ -80,6 +80,8 @@
               sessionStorage.ID_USUARIO = json.id;
               sessionStorage.NOME_USUARIO = json.nome;
               sessionStorage.EMAIL_USUARIO = json.email;
+              sessionStorage.MATRICULA_USUARIO = json.matricula;
+              sessionStorage.DEPARTAMENTO_USUARIO = json.distritoPolicial;
               sessionStorage.SENHA_USUARIO = json.senha;
 
               alert("Login com sucesso!");
