--- a/public/dash/dashboardOutros.html
+++ b/public/dash/dashboardOutros.html
@@ -32,7 +32,7 @@
             <div class="outros">
                 <h4>OUTROS</h4>
                 <a href="../index.html"><img src="../assets/home.png">Home</a>
-                <a><img src="../assets/conta-icon.png">Conta</a>
+                <a href="/dash/conta.html"><img src="../assets/conta-icon.png">Conta</a>
             </div>
 
         </div>
