Ligando a dash ao banco de dados

--- a/public/dash/dashboardVeiculo.html
+++ b/public/dash/dashboardVeiculo.html
@@ -10,7 +10,7 @@
     <title>Dashboard - INSIGNA</title>
 </head>
 
-<body>
+<body onload="roubosMesVeiculo(), roubosAnoVeiculo()">
 
     <div class="menu-lateral">
         <div class="container-menu">
@@ -92,7 +92,7 @@
                 <div class="indicadores_geral">
 
                     <div class="secao_kpi_geral">
-                        <h3 id="tituloKPI1">Quantidade de Roubos esse mês</h3>
+                        <h3 id="tituloKPI1">Quantidade de Roubos do ultimo mês</h3>
                         <div class="caixa_geral">
                             <div class="kpi_geral">
                                 <p id="dadosKPI1"></p>
