Dashboard geral dos roubos finalizada e veiculos zonas

--- a/public/dash/dashboardOutros.html
+++ b/public/dash/dashboardOutros.html
@@ -10,7 +10,7 @@
     <title>Dashboard - INSIGNA</title>
 </head>
 
-<body onload="roubosMesOutros(), roubosAnoOutros()">
+<body onload="roubosMesOutros(), roubosAnoOutros(), regiaoOutros(), graficoOutros()">
 
     <div class="menu-lateral">
         <div class="container-menu">
@@ -65,7 +65,6 @@
 
                         <div class="selecionar">
                             <select class="select_filtro" id="tipo_roubo">
-                                <option value="#">Escolher roubo</option>
                                 <option value="outros">Outros</option>
                                 <option value="veiculo">Veículo</option>
                                 <option value="carga">Carga</option>
