--- a/public/cadastroDep.html
+++ b/public/cadastroDep.html
@@ -37,12 +37,12 @@
                             <input type="text" placeholder="Nome Do Departamento" id="ipt_nome" />
 
                             <input type="text" placeholder="Logradouro" id="ipt_departamento" />
-                            <input type="text" placeholder="Cidade" id="ipt_email" />
+                            <input type="text" placeholder="Cidade" id="ipt_cidade" />
                         </div>
 
                         <div class="form2">
-                            <input type="text" placeholder="CEP" id="ipt_matricula" />
-                            <input type="password" placeholder="Número" id="ipt_senha" />
+                            <input type="text" placeholder="CEP" id="ipt_cep" />
+                            <input type="password" placeholder="Número" id="ipt_numero" />
                             <input type="password" placeholder="Bairro" id="ipt_confirmarSenha" />
                         </div>
                     </div>
@@ -63,3 +63,60 @@
 </body>
 
 </html>
+
+<script>
+    function cadastrar() {
+      var nomeVar = ipt_nome.value;
+      var logradouroVar = ipt_logradouro.value;
+      var cidadeVar = ipt_cidade.value;
+      var numeroVar = Number(ipt_matricula.value);
+      var cepVar = ipt_cep.value;
+      var bairroVar = ipt_bairro.value;
+  
+      if (
+        nomeVar == "" ||
+        logradouroVar == "" ||
+        cidadeVar == "" ||
+        numeroVar == "" ||
+        cepVar == "" ||
+        bairroVar == ""
+      ) {
+        alert("Mensagem de erro para todos os campos em branco");
+        return false;
+      } 
+  
+      // Enviando o valor da nova input
+      fetch("/usuarios/cadastrar", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify({
+          // crie um atributo que recebe o valor recuperado aqui
+          // Agora vá para o arquivo routes/usuario.js
+          nomeServer: nomeVar,
+          logradouroServer: logradouroVar,
+          cidadeServer: cidadeVar,
+          numeroServer: numeroVar,
+          cepServer: cepVar,
+          bairroServer: bairroVar,
+        }),
+      })
+        .then(function (resposta) {
+          console.log("resposta: ", resposta);
+  
+          if (resposta.ok) {
+            alert("Cadastrado com sucesso!");
+            setTimeout(() => {
+              window.location = "cadastro.html";
+            }, "1000");
+          } else {
+            throw "Houve um erro ao tentar realizar o cadastro!";
+          }
+        })
+        .catch(function (resposta) {
+          console.log(`#ERRO: ${resposta}`);
+        });
+    }
+  </script>
+  
